--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.2.5",
+        "barryvdh/laravel-ide-helper": "v2.8.2",
         "fideloper/proxy": "^4.2",
         "guzzlehttp/guzzle": "^6.5",
         "laminas/laminas-diactoros": "^2.3",
@@ -19,7 +20,7 @@
         "psr/http-factory": "^1.0"
     },
     "require-dev": {
-        "barryvdh/laravel-ide-helper": "^2.7",
+       
         "facade/ignition": "^2.0",
         "fzaninotto/faker": "^1.9.1",
         "mockery/mockery": "^1.3.1",
