--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^7.2.5",
         "barryvdh/laravel-ide-helper": "v2.8.2",
         "fideloper/proxy": "^4.2",
+        "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^6.5",
         "laminas/laminas-diactoros": "^2.3",
         "laravel/framework": "^7.0",
